# yandex-conqueror

./: .coveragerc  .gitlab-ci.yml  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  app-template.yml  docker-compose.yml  lingwistyka.json  random_msg.py  requirements.txt  setup.cfg  setup.py
conqueror/: __main__.py  app.py  cassandra.py  run.py  utils.py
conqueror/endpoints/: __init__.py  add_account.py  add_business.py  add_review.py  view_business.py  view_cities.py  view_messages.py
conqueror/msg_generator/: __init__.py  definitions.py  messages.py
conqueror/scraper/: __init__.py  __main__.py  base_yandex.py  data_importer.py  data_reader.py  get_object_types.py  orders_obtainer.py  point_obtain.py  pulse_coordinator.py  scrap_yandex.py  yandex_api_schema.py
conqueror/utils/: __init__.py  geom2d.py  point_obtain.py
resources/: messages-short.json  object_types.json  russian-cities.json  russian-cities.xlsx
services/cassandra/: Dockerfile  schema.cql
tests/: test.sh  test_add_account.py  test_business.py  test_cities.py  test_message_pieces.py  test_scraper.py  test_utils.py
