# coding: utf-8
[metadata]
name = yandex-conqueror
keywords = ha, high availability, scalable, scalability, server, metrics, tracing
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Piotr Maślanka
author_email = pmaslanka@smok.co
description = An opinion adder to inform the Russian public about what's going on in Ukraine
url = https://git.dms-serwis.com.pl/yandex-conqueror/conqueror


[options]
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:
install_requires =
    requests
    selenium
    webdriver-manager
    satella


[options.packages.find]
exclude =
    docs
    tests
